--- a/vignettes/plume.Rmd
+++ b/vignettes/plume.Rmd
@@ -84,9 +84,9 @@ Plume$new(
 )
 ```
 
-## Pushing data into a yaml header
+## Pushing data into a YAML header
 
-`PlumeQuarto` allows you to inject author metadata directly into the yaml header of a `.qmd` file.
+`PlumeQuarto` allows you to inject author metadata directly into the YAML header of a `.qmd` file.
 
 Consider the following `.qmd` file:
 
@@ -101,7 +101,7 @@ tmp <- withr::local_tempfile(
 cat(read_file(tmp))
 ```
 
-You can push information from the input data into the yaml header using the `to_yaml()` method.
+You can push information from the input data into the YAML header using the `to_yaml()` method.
 
 ```{r, eval = FALSE}
 aut <- PlumeQuarto$new(dplyr::slice(encyclopedists, 1, 4))
@@ -116,7 +116,7 @@ cat(read_file(tmp))
 
 Authors are listed in the order they're defined in the input data.
 
-If the yaml header already has an `author` and `affiliations` keys, `to_yaml()` replaces old values with new ones.
+If the YAML header already has an `author` and `affiliations` keys, `to_yaml()` replaces old values with new ones.
 
 ```{r, eval = FALSE}
 aut <- PlumeQuarto$new(dplyr::slice(encyclopedists, 2))
