--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-plume provides tools for handling and generating author-related information for scientific writing in Rmarkdown and Quarto.
+plume provides tools for handling and generating author-related information for scientific writing in R Markdown and Quarto.
 The package implements two `R6` classes:
 
 - `Plume`: class that generates author lists and other author-related information
