--- a/vignettes/plume-workflow.Rmd
+++ b/vignettes/plume-workflow.Rmd
@@ -14,9 +14,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-plume is designed to work with spreadsheets, which makes it easy to store, maintain and share data with co-authors. I recommend using [Google Sheets](https://docs.google.com/spreadsheets/) because it works great with the [googlesheets4](https://googlesheets4.tidyverse.org) package to manage sheets from R.
+plume is designed to work with spreadsheets, which makes it easy to store, maintain and share data with co-authors. I recommend using [Google Sheets](https://docs.google.com/spreadsheets/) to take advantage of the R interface provided by the [googlesheets4](https://googlesheets4.tidyverse.org) package.
 
-First, you need to create a spreadsheet. `plume_template()` provides a default spreadsheet template for that purpose.
+First, you need to create a spreadsheet. `plume_template()` provides a default template for that purpose.
 
 Note that if it's the first time you use googlesheets4, you'll need to grant the package permission to operate with Google Sheets. Read more about googlesheets4 authentication [here](https://googlesheets4.tidyverse.org/reference/gs4_auth.html).
 
@@ -31,13 +31,13 @@ gs4_create(
 
 The above will create a sheet named `encyclopédie` with the columns defined by `plume_template()`.
 
-Enter your information and share the sheet to your collaborators so they can add theirs too. Once the sheet contains all author metadata, use `read_sheet()` to read it in R.
+Enter your information and share the sheet with your collaborators so they can add theirs too. Once the sheet contains all author metadata, use `read_sheet()` to read it in R.
 
 ```{r eval = FALSE}
 read_sheet(gs4_find("encyclopédie"))
 ```
 
-Below is what the typical plume set up would look like in a R markdown or Quarto document.
+Below is what the typical plume set up would look like in an R markdown or Quarto document.
 
 Note that the code would have to be put in a separate R script when using `PlumeQuarto` to inject author metadata.
 
