--- a/vignettes/plume-workflow.Rmd
+++ b/vignettes/plume-workflow.Rmd
@@ -35,8 +35,6 @@ Enter your information and share the sheet with your collaborators so they can a
 
 Note that if it's the first time you use googlesheets4, you'll need to grant the package permission to work with Google Sheets. You can read more about googlesheets4 authentication [here](https://googlesheets4.tidyverse.org/reference/gs4_auth.html).
 
-<!--## Reading in author data-->
-
 Once the sheet is online, use `read_sheet()` to read it in R.
 
 ```{r eval = FALSE}
@@ -44,8 +42,6 @@ read_sheet(gs4_find("encyclopédie"))
 ```
 
 ## Set up
-
-<!--differs slightly depending on whether you use `Plume` or `PlumeQuarto`.-->
 
 ### Plume
 
@@ -96,19 +92,18 @@ If you use `PlumeQuarto` to inject author information in a Quarto document, you'
 
 Use `plm_push()` to insert data not handled by Quarto's author schema such as author contributions.
 
-```{verbatim}
+```{r, eval = FALSE}
+
 library(googlesheets4)
 library(plume)
 
 tbl_authors <- gs4_find("encyclopédie") |> read_sheet()
 file <- "my_file.qmd"
 
-aut <- Plume$new(tbl_authors)
+aut <- PlumeQuarto$new(tbl_authors)
 aut$set_corresponding_authors(1)
 aut$to_yaml(file)
-aut$get_contributions() |> plm_push(file, "# Contributions")
+aut$get_contributions() |> plm_push(file, where = "## Contributions")
 ```
 
 Remember to run the script everytime the spreadsheet is updated to implement the changes in your document.
-
-<!--meaning the function will always edit the data where they are in the document, even is you change the where argument or the title. If you want to change the location of say contributions, you'll have to move them manually in you Quarto file or delete them and execute `plm_push()` again.-->
