--- a/vignettes/plume.Rmd
+++ b/vignettes/plume.Rmd
@@ -236,7 +236,7 @@ plume provides a convenient way to generate contribution lists using the `get_co
 aut <- Plume$new(encyclopedists, names = c(contribution = "contribution_n"))
 aut$get_contributions()
 
-aut$get_contributions(role_first = FALSE, literal_name = TRUE)
+aut$get_contributions(role_first = FALSE, literal_names = TRUE)
 
 aut_v <- Plume$new(encyclopedists, names = c(contribution = "contribution_v"))
 aut_v$get_contributions(role_first = FALSE, name_list = TRUE)
