Update `$get_contact_details()` example

--- a/vignettes/plume.Rmd
+++ b/vignettes/plume.Rmd
@@ -225,7 +225,7 @@ aut$get_contact_details()
 
 aut$get_contact_details(phone = TRUE)
 
-aut$get_contact_details(format = "{details} ({name})")
+aut$get_contact_details(format = "{name}: {details}")
 ```
 
 ### Contributions
